# tgdlbot

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  auth.py  bot.py  config.py  docker-compose.yml  pyproject.toml  whitelist.txt.example
docs/superpowers/plans/: 2026-04-09-error-cleanup-fix.md  2026-04-26-python-3.14-upgrade.md  2026-04-27-user-whitelist.md
docs/superpowers/specs/: 2026-04-09-error-cleanup-fix-design.md  2026-04-26-python-3.14-upgrade-design.md  2026-04-27-user-whitelist-design.md  2026-06-30-local-bot-api-design.md
tests/: test_auth.py  test_bot.py
